# wallie-de-sensei-contracts

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  TODO.md  streaming.md
.github/workflows/: ci.yml
backend/: package.json
backend/src/: index.ts
backend/src/utils/: errors.ts
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs
contracts/factory/tests/: adversarial_auth.rs  batch_pause_gate.rs  factory_error_discriminants.rs  factory_init_security.rs  factory_setters.rs  factory_stream_e2e.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/governance/tests/: gas_regression.rs  signer_index_proptest.rs
contracts/stream/: Cargo.toml
contracts/stream/src/: accrual.rs  delegation.rs  errors.rs  lib.rs  test.rs  test_token_edge_cases.rs  test_withdrawable_props.rs  token_check.rs
contracts/stream/tests/: adaptive_ttl.rs  adversarial_auth.rs  auto_claim.rs  balance_conservation.rs  batch_recipient_cache.rs  bulk_cancel.rs  chaos.rs  cliff_only_variant.rs  clock_monotonicity.rs  clone_stream.rs  close_guard_paths.rs  create_stream_relative.rs  dust_threshold.rs  event_snapshots_suite.rs  factory_fuzz.rs  factory_policy.rs  formal_verification_smoke.rs  gas_regression.rs  governance_executor_e2e.rs  governance_integration.rs  governance_proptest.rs  governance_ttl.rs  health_matrix.rs  id_range.rs  id_reservation.rs  integration_suite.rs  keeper_cancel.rs  max_rate_per_second.rs  metadata_extension.rs  paused_stream_count.rs  rate_bounds.rs  rate_decrease_after_withdraw.rs  recipient_paged_index.rs  recipient_update_state_machine.rs  storage_key_compat.rs  stream_templates.rs  sweep_liability.rs  top_up_boundary.rs  upgrade_path.rs  withdrawal_frequency.rs
docs/: DEPLOYMENT.md  README.md  error.md  events.md  factory.md  formal-verification.md  gas.md  governance.md  recipient-stream-index.md  security.md  stream-templates.md  streaming.md  test-coverage.md  token-assumptions.md
script/: check-wasm-size.sh  deploy-testnet.sh  update-wasm-checksums.sh  validate-doc-alignment.py  validate_gas.py  verify-wasm-checksum.sh
tests/: test_gas_validation.py  test_validator.py
wasm/: checksums.sha256
