[package]
name = "wallie_de_sensei_factory"
version = "0.1.0"
edition = "2021"
description = "Wallie de Sensei Treasury Factory Policy Wrapper"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils", "wallie_de_sensei_stream/testutils"]

[dependencies]
soroban-sdk = "21.7.7"
wallie_de_sensei_stream = { path = "../stream" }

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }
wallie_de_sensei_stream = { path = "../stream", features = ["testutils"] }

[[test]]
name = "factory_setters"
path = "tests/factory_setters.rs"
required-features = ["testutils"]

[[test]]
name = "factory_stream_e2e"
path = "tests/factory_stream_e2e.rs"
required-features = ["testutils"]
