[package]
name = "wallie_de_sensei_governance"
version = "0.1.0"
edition = "2021"
description = "Minimal timelock governance contract for Wallie de Sensei protocol parameter changes"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "21.7.7"

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }
proptest = "1"
