[package]
name = "wallie_de_sensei_stream"
version = "0.1.0"
edition = "2021"
description = "Wallie de Sensei USDC streaming contract for Stellar Soroban"
# Issue #206 — global emergency pause: scaffold branch. Instance pause flag + admin setter to follow.

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

# Soroban SDK version pinned for reproducible builds.
# soroban-sdk 21.7.7 is compatible with Stellar Soroban networks as of Feb 2026.
# See rust-toolchain.toml for Rust version pin.
# To upgrade, verify compatibility with latest Stellar/Soroban network and run full test suite.

[dependencies]
soroban-sdk = "21.7.7"

[dev-dependencies]
# Required for simulating ledger environment and testing time dependencies
soroban-sdk = { version = "21.7.7", features = ["testutils"] }
# Factory policy enforcement tests (#525)
wallie_de_sensei_factory = { path = "../factory", features = ["testutils"] }
# Governance integration tests (#585)
wallie_de_sensei_governance = { path = "../governance", features = ["testutils"] }
# Property-based testing for accrual math fuzz harness (#292)
proptest = "1"
# Required for constructing Ed25519 keypairs in delegated-withdraw tests
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
